# Digital_LinDaiyu_QT

./: .env.example  .gitignore  .gitmodules  Digital_LDY_environment.yml  README.md  chat_asr.py  chat_thread.py  chat_window.py  check_resources.py  env.yml  load_knowledge.py  main.py  pyproject.toml  requirements.txt  test.py  tongyi_embeddings.py  utils.py
GPT-SoVITS-v2-240821/: api_v2.py  package-lock.json
GPT-SoVITS-v2-240821/GPT_SoVITS/TTS_infer_pack/: TTS.py
GPT-SoVITS-v2-240821/GPT_SoVITS/configs/: tts_infer.yaml
GPT-SoVITS-v2-240821/configs/: tts_infer.yaml
REBUILD/: base.ipynb  knowledge.ipynb
digital_lindaiyu/: __init__.py  agent_tools.py  asr.py  chat.py  chroma_noop.py  config.py  deepseek_agent.py  embeddings.py  knowledge.py  logging_config.py  persona.py  rag.py  resources.py
digital_lindaiyu/tts/: __init__.py  base.py  cosyvoice.py  factory.py  gpt_sovits.py
knowledge/txt/: prompt.txt
knowledge/txt/人物介绍/: 人物经历.txt  人际关系.txt  参考回答.txt  语气风格.txt
knowledge/txt/诗词/: 诗词常识.txt
knowledge_base/: chroma.sqlite3
resources/: prompt.txt
scripts/: __init__.py  load_kb.py  test_chat.py  test_tts.py
ui/: __init__.py  main_window.py  theme.py  widgets.py  worker.py
