[project]
name = "digital-lindaiyu-qt"
version = "0.1.0"
description = "Qt chat client for Digital Lin Daiyu"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "PySide6>=6.7,<7",
    "chromadb>=0.5,<1",
    "dashscope>=1.20,<2",
    "langchain>=0.3,<1",
    "langchain-chroma>=0.2,<1",
    "langchain-community>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "langchain-text-splitters>=0.3,<1",
    "langgraph>=0.2,<1",
    "numpy>=1.26,<3",
    "onnxruntime>=1.16,<1.24",
    "openai>=1.55,<2",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "requests>=2.31,<3",
    "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
asr = ["pyaudio>=0.2.14"]
knowledge = ["pypdf>=5"]
# 本地嵌入（默认推荐，离线、无 API key）
local-embeddings = ["fastembed>=0.4,<1"]

[tool.uv]
package = false
